# la-yapa

./: .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  MASTER_VISION.md  PROGRESS.md  README.md  checklist.md  docker-compose.yml  individual-prompts.txt  master-prompt.txt  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/apps/ads/: admin.py  models.py
apps/api/apps/bags/: admin.py  apps.py  factories.py  models.py  tests.py
apps/api/apps/business/: apps.py  serializers.py  services.py  urls.py  views.py
apps/api/apps/businesses/: admin.py  apps.py  factories.py  models.py  tests.py
apps/api/apps/consumer/: apps.py  filters.py  geo.py  images.py  orders_serializers.py  orders_views.py  pagination.py  serializers.py  urls.py  views.py
apps/api/apps/core/: apps.py  models.py  tests.py  uploads.py  views.py
apps/api/apps/gamification/: admin.py  models.py
apps/api/apps/geo/: apps.py  fields.py  services.py  tests.py  urls.py  utils.py  views.py
apps/api/apps/impact/: admin.py  apps.py  models.py  signals.py
apps/api/apps/notifications/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/api/apps/ops/: __init__.py  serializers.py  urls.py  views.py
apps/api/apps/orders/: admin.py  factories.py  models.py  services.py  state_machine.py  tasks.py  tests.py
apps/api/apps/payments/: admin.py  ip_allowlist.py  models.py  services.py  tasks.py  urls.py  views.py  webhooks.py
apps/api/apps/reviews/: admin.py  factories.py  models.py
apps/api/apps/sales/: admin.py  models.py
apps/api/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
(+285 files in other folders)
