[project]
name = "layapa-api"
version = "0.1.0"
description = "La Yapa Django REST API"
requires-python = ">=3.12"

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations",
    "manage.py",
    "*/settings/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "DJ",   # flake8-django
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line too long (Black handles)
    "B008",   # function call in argument defaults (DRF/Django pattern)
    "RUF012", # mutable class attrs without ClassVar — Django models/Meta use plain lists
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"]
"**/migrations/**" = ["E", "F", "I"]

# ---------- Black ----------
[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
  migrations
)/
'''

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["migrations/", "manage.py"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

# ---------- pytest ----------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--reuse-db",
    "--cov=apps",
    "--cov-report=term-missing",
]
